[tool.poetry]
name = "f1-performance-analysis"
version = "1.0.0"
description = "Advanced F1 Performance Analysis & Visualization Platform using OpenF1 API"
authors = ["Chandra Kiran Narala <chandrakirannarala@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.0"
dash = "^2.14.0"
plotly = "^5.17.0"
pydantic = "^2.4.0"
cachetools = "^5.3.0"
redis = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
f1-dashboard = "app:main"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true